# loop-protocol

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  .textlintignore  .textlintrc  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.agents/: mcp_config.json
.claude/: CLAUDE.md  settings.json
.codex/: config.toml  hooks.json
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: CLAUDE.md  pull_request_template.md
.textlint/: prh.yml
LICENSES/: CLAUDE.md  README.md
assets/: CLAUDE.md  README.md  index--6w3bzWS.js  index--Pkt6D1R.js  index-0D5ukZsV.js  index-1dososbu.js  index-2CgLqW_G.js  index-3LPx02Fy.js  index-4548EzV8.js  index-5OftamEn.js  index-7I-DavUR.js  index-7NwpgfsX.js  index-7bDP5NXA.js  index-7pTi1du-.js  index-9MEDhH-X.js  index-9rmodEQQ.js  index-B-a5UZpM.js  index-B04F62f2.js  index-B08-EWDs.js  index-B0MTzPy5.js  index-B1Mf4WWX.js  index-B1sVjQYc.js  index-B25omSVC.js  index-B2IPhphO.js  index-B3SbsWfx.js  index-B4ek99NH.js  index-B5EnlbmT.js  index-B5Kn_9Uh.js  index-B6EiK_Zj.js  index-B6jLNc-z.js  index-B7_eT0zO.js  index-B8QWR8bv.js  index-B8Ten7a3.js  index-B918DQmT.js  index-BBwFpWhL.js  index-BCx8Xb8N.js  index-BD6ApBYi.js  index-BDH-9BXK.js  index-BDH59-vi.js  index-BE8qqThr.js  (+311 more)
docs/: CLAUDE.md
pr-1000/: index.html
pr-1001/: index.html
pr-1002/: index.html
pr-1003/: index.html
pr-1004/: index.html
pr-1005/: index.html
pr-1015/: index.html
pr-1017/: index.html
pr-1018/: index.html
(+3866 files in other folders)
