[project]
name = "loop-protocol-tools"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.8,<4",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not github_live'"
markers = [
  "github_live: exercises real GitHub API write access via gh CLI against a disposable Issue (deselected by default addopts; opt in explicitly with -m github_live and an authenticated gh CLI).",
]

[tool.ruff]
line-length = 120
